objects/Jiffle_Event__c.object
<CustomObject>
    <fields>
        <fullName>Confirm_Attendee__c</fullName>
        <formula>IF( Event_End_Date__c &lt;=Today() &amp;&amp; Today() &lt;= Event_End_Date__c +15 , 
HYPERLINK("/a4N?fcf=00B340000090IWG", 
"Please Confirm Attendee","_self"), 
"Confirm Attendee after Event")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirm Attendees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Event UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Jiffle_Today_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JiffleNow Today Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jifflenow_Event_URL__c</fullName>
        <label>Jifflenow Event URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Meetings__c</fullName>
        <formula>HYPERLINK("/"+Id,
"View My Meetings","_self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Scheduled Meetings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Attendees__c</fullName>
        <label>Number Attendees</label>
        <summarizedField>Jiffle_Agenda_Item__c.Number_Attendees__c</summarizedField>
        <summaryForeignKey>Jiffle_Agenda_Item__c.Jiffle_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Meeting_Sessions__c</fullName>
        <label>Number of Meeting/Sessions</label>
        <summarizedField>Jiffle_Agenda_Item__c.Number_Meetings_Sessions__c</summarizedField>
        <summaryForeignKey>Jiffle_Agenda_Item__c.Jiffle_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Meeting__c</fullName>
        <formula>IF(Event_End_Date__c &gt; Today(),
HYPERLINK("/apex/JiffleNowMeetingSchedular?EventId="+Event_UUID__c,
"Schedule Meeting","_self"),
"Event Completed")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule a Meeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Engagements__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Engagements</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unique_Accounts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Unique Accounts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unique_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Unique Opportunities</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Global Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Events_Since_Oct_2015</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Confirm_Attendee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:180</value>
        </filters>
        <label>Events Since 2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recently_Completed_Events</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Confirm_Attendee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_End_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:15</value>
        </filters>
        <label>Recently Completed Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Upcoming_Recently_Closed_Events</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Status__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Schedule_Meeting__c</columns>
        <columns>My_Meetings__c</columns>
        <columns>Confirm_Attendee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Event_End_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:15</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>Upcoming &amp; Recently Closed Events</label>
        <language>en_US</language>
    </listViews>
</CustomObject>